# hackathon

./: .env.example  .gitignore  README.md  docker-compose.yml
knowledge_portal_backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  INTEGRATION_SUMMARY.md  README.md  alembic.ini  create_db.py  docker-compose.yml  mock_data.sql  pyproject.toml  requirements.txt  setup_database.py
knowledge_portal_backend/alembic/: env.py
knowledge_portal_backend/alembic/versions/: 60c1c21aa16b_add_user_profile_fields_skill_level_and_.py  init_user_profile_fields.py
knowledge_portal_backend/app/: __init__.py  main.py
knowledge_portal_backend/app/api/v1/: api.py
knowledge_portal_backend/app/core/: config.py  container.py  database.py  deps.py  elasticsearch_client.py  init_db.py  redis_client.py  security.py  startup.py
knowledge_portal_backend/app/crud/: base.py  learning_path.py  skill.py  user.py  video.py
knowledge_portal_backend/app/db/: base_class.py  session.py
knowledge_portal_backend/app/models/: __init__.py  associations.py  learning_path.py  quiz.py  quiz_attempt.py  skill.py  tag.py  user.py  video.py
knowledge_portal_backend/app/repositories/: base.py
knowledge_portal_backend/app/schemas/: __init__.py  auth.py  learning_path.py  profile.py  quiz.py  skill.py  token.py  user.py  video.py  video_content_search.py
knowledge_portal_backend/app/scripts/: setup_elasticsearch.py  setup_es.py
knowledge_portal_backend/app/services/: __init__.py  base.py  learning_path.py  video_content_search.py
knowledge_portal_backend/docker/api/: Dockerfile
knowledge_portal_backend/scripts/: add_user_profile_fields.py  create_db.py  setup_es.py  verify_columns.py
(+72 files in other folders)
